--- a/server/src/public/views/index.html
+++ b/server/src/public/views/index.html
@@ -6,30 +6,30 @@
     <meta name="viewport" content="width=device-width, maximum-scale=1">
 
     <title>Garducci Detail</title>
-    <link rel="icon" href="/static/img/favicon.png" type="image/png">
-    <link rel="shortcut icon" href="/static/img/logo.png" type="x-icon">
+    <link rel="icon" href="/public/img/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="/public/img/logo.png" type="x-icon">
 
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,800italic,700italic,600italic,400italic,300italic,800,700,600'
         rel='stylesheet' type='text/css'>
 
-    <link href="/static/css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="/static/css/style.css" rel="stylesheet" type="text/css">
-    <link href="/static/css/font-awesome.css" rel="stylesheet" type="text/css">
-    <link href="/static/css/responsive.css" rel="stylesheet" type="text/css">
-    <link href="/static/css/animate.css" rel="stylesheet" type="text/css">
+    <link href="/public/css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="/public/css/style.css" rel="stylesheet" type="text/css">
+    <link href="/public/css/font-awesome.css" rel="stylesheet" type="text/css">
+    <link href="/public/css/responsive.css" rel="stylesheet" type="text/css">
+    <link href="/public/css/animate.css" rel="stylesheet" type="text/css">
 
     <!--[if IE]><style type="text/css">.pie {behavior:url(PIE.htc);}</style><![endif]-->
 
-    <script type="text/javascript" src="/static/js/jquery.1.8.3.min.js"></script>
-    <script type="text/javascript" src="/static/js/bootstrap.js"></script>
-    <script type="text/javascript" src="/static/js/jquery-scrolltofixed.js"></script>
-    <script type="text/javascript" src="/static/js/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="/static/js/jquery.isotope.js"></script>
-    <script type="text/javascript" src="/static/js/wow.js"></script>
-    <script type="text/javascript" src="/static/js/classie.js"></script>
-    <script type="text/javascript" src="/static/js/jquery.mask.min.js"></script>
-    <script src="/static/js/main.js"></script>
+    <script type="text/javascript" src="/public/js/jquery.1.8.3.min.js"></script>
+    <script type="text/javascript" src="/public/js/bootstrap.js"></script>
+    <script type="text/javascript" src="/public/js/jquery-scrolltofixed.js"></script>
+    <script type="text/javascript" src="/public/js/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="/public/js/jquery.isotope.js"></script>
+    <script type="text/javascript" src="/public/js/wow.js"></script>
+    <script type="text/javascript" src="/public/js/classie.js"></script>
+    <script type="text/javascript" src="/public/js/jquery.mask.min.js"></script>
+    <script src="/public/js/main.js"></script>
 
 
     <!--[if lt IE 9]>
@@ -48,7 +48,7 @@
             <div class="container">
                 <figure class="logo animated fadeInDown delay-07s">
                     <a href="#header">
-                        <img src="/static/img/logo.png" alt="main logo">
+                        <img src="/public/img/logo.png" alt="main logo">
                     </a>
                 </figure>
                 <h1 class="animated fadeInDown delay-07s">Bem Vindo ao Garducci Detail</h1>
@@ -73,7 +73,7 @@
                 </li>
                 <li class="small-logo">
                     <a href="#header">
-                        <img src="/static/img/small-logo.png" alt="">
+                        <img src="/public/img/small-logo.png" alt="">
                     </a>
                 </li>
                 <li>
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <figure class="col-lg-7 col-sm-6  text-right wow fadeInUp delay-02s">
-                    <img src="/static/img/white-car.jpg" alt="cleaning-white-car">
+                    <img src="/public/img/white-car.jpg" alt="cleaning-white-car">
                 </figure>
 
             </div>
@@ -127,7 +127,7 @@
         <div class="container">
             <div class="row">
                 <figure class="col-lg-5 col-sm-4 wow fadeInLeft">
-                    <img src="/static/img/camaro.jpg" alt="car-camaro">
+                    <img src="/public/img/camaro.jpg" alt="car-camaro">
                 </figure>
                 <div class="col-lg-7 col-sm-8 featured-work">
                     <div class="featured-box-col2 wow fadeInRight delay-02s">
@@ -187,7 +187,7 @@
                     </div>
                 </div>
                 <figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
-                    <img src="/static/img/porshe_intern.jpeg" alt="intern-of-porshe">
+                    <img src="/public/img/porshe_intern.jpeg" alt="intern-of-porshe">
                 </figure>
 
             </div>
@@ -222,39 +222,39 @@
         </div>
         <div class="portfolioContainer wow fadeInUp delay-04s">
             <div class=" Portfolio-box store">
-                <img src="/static/img/front-store.jpg" alt="front-of-store">
+                <img src="/public/img/front-store.jpg" alt="front-of-store">
             </div>
             <div class="Portfolio-box store">
-                <img src="/static/img/store02.jpg" alt="store-intern">
+                <img src="/public/img/store02.jpg" alt="store-intern">
                 <h3>A Oficina</h3>
                 <p>Muito trabalho e cuidado.</p>
             </div>
             <div class=" Portfolio-box cars">
-                <img src="/static/img/mustang.jpg" alt="car-mustang">
+                <img src="/public/img/mustang.jpg" alt="car-mustang">
             </div>
 
             <div class=" Portfolio-box moto">
-                <img src="/static/img/moto.jpg" alt="moto-kawasaki">
+                <img src="/public/img/moto.jpg" alt="moto-kawasaki">
             </div>
             <div class=" Portfolio-box cars">
-                <img src="/static/img/windows-cleanup.jpg" alt="car-cleanUp-windows">
+                <img src="/public/img/windows-cleanup.jpg" alt="car-cleanUp-windows">
                 <h3>Os Carros</h3>
                 <p>Limpeza com eficiência.</p>
             </div>
             <div class=" Portfolio-box moto">
-                <img src="/static/img/moto-engine.jpg" alt="moto-engine">
+                <img src="/public/img/moto-engine.jpg" alt="moto-engine">
             </div>
 
             <div class=" Portfolio-box cars">
-                <img src="/static/img/fusca04.jpg" alt="car-fusca">
+                <img src="/public/img/fusca04.jpg" alt="car-fusca">
             </div>
             <div class=" Portfolio-box moto">
-                <img src="/static/img/moto05.jpg" alt="">
+                <img src="/public/img/moto05.jpg" alt="">
                 <h3>As motos</h3>
                 <p>Tratamento profissional.</p>
             </div>
             <div class=" Portfolio-box cars">
-                <img src="/static/img/car-intern.jpg" alt="washing-intern-of-car">
+                <img src="/public/img/car-intern.jpg" alt="washing-intern-of-car">
             </div>
         </div>
     </section>
@@ -344,7 +344,7 @@
         <div class="container">
             <div class="footer-logo">
                 <a href="#header">
-                    <img src="/static/img/logo.png" alt="logo-image">
+                    <img src="/public/img/logo.png" alt="logo-image">
                 </a>
             </div>
             <span class="copyright">Copyright © 2017 | Desenvolvido por Marcus Garducci.</span>
