--- a/server/src/public/views/index.html
+++ b/server/src/public/views/index.html
@@ -314,7 +314,7 @@
 
                 <div class="col-lg-6 col-sm-5 wow fadeInUp delay-05s">
                     <div class="form">
-                        <form action="static/js/nodemailer.js" name="form_contact" method="post">
+                        <form action="/send-email" name="form_contact" method="post">
                             <p class="titulo">Formulário
                                 <small class="asteristico">*Campos Obrigatorios</small>
                             </p>
