--- a/server/src/public/views/index.html
+++ b/server/src/public/views/index.html
@@ -330,15 +330,10 @@
                             placeholder="Seu Telefone *" required>
                             <script type="text/javascript">$('#phone').mask('(00) 00000-0000')</script>
 
-                            <textarea class="input-text text-area asterisco" id="messenge" name="messenge" 
+                            <textarea class="input-text text-area asterisco" id="messenge" name="message" 
                             cols="0" rows="0" placeholder="Sua Mensagem"></textarea>
-
-                            <tr align="right">
-                                <td colspan="2">
-                                    <input type="submit" class="campo_submit input-btn" value="Enviar"/>
-                                </td>
-                            </tr>
-                            </table>
+                            
+                            <input type="submit" class="campo_submit input-btn" value="Enviar"/>
                         </form>
                     </div>
                 </div>
