--- a/server/src/public/views/index.html
+++ b/server/src/public/views/index.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, maximum-scale=1">
+    <meta name="description" content="Estética automativa profissional">
+    <meta name="keywords" content="detailer automotivo,detailer,automotivo,carro,automóvel,lavagem,
+                                    estética automativa, estética,estética automotiva sp,estética automotiva Jundiaí,
+                                    estética automotiva jundiai,lavar carro, Garducci, Garducci Detail,
+                                    garducci, garduccidetail">
+    <meta name="author" content="Marcus Garducci">
 
     <title>Garducci Detail</title>
     <link rel="icon" href="/public/img/favicon.png" type="image/png">
@@ -99,21 +105,49 @@
             <h2>Serviços</h2>
             <h6>Seu carro novo de novo.</h6>
             <div class="row">
-                <div class="col-lg-4 col-sm-6 wow fadeInLeft delay-05s">
+                <div class="col-lg-5 col-sm-7 wow fadeInLeft delay-04s">
                     <div class="service-list">
                         <div class="service-list-col2">
-                            <h3>Quer um trato completo no seu veículo?</h3>
-                            <p>Então você quer o nosso serviço padrão, em que iremos fazer a limpeza do seu automóvel por completo,
-                                ou seja, a parte
-                                <strong>Exterior</strong>,
-                                <strong>Interior</strong> e
-                                <strong>Motor</strong>.</p>
-                            <p>Com esse tratamento, seu veículo irá parecer que acabou de sair da fábrica.</p>
+                            <h3>Que tal deixar seu carro zerado por completo?</h3>
+                            <p>O Full detail vai além do que você imagina, e para isso
+                                fazemos os seguintes trabalhos:
+                            </p>
+                            <ul>
+                                <li><b>CRISTALIZAÇÃO DE VIDROS</b></li>
+                                    <p>A cristalização traz uma camada protetora, plana, transparente e 
+                                    lisa nos vidros, com isso as gotas da chuva escorrem 
+                                    para as extremidades</p>
+                                <hr>
+                                <li><b>LAVAGEM TÉCNICA DETALHADA</b></li>
+                                    <p>A lavagem detalhada é feita nos mínimos detalhes, visando 
+                                    sempre o resultado final sem medir esforços. </p>
+                                <hr>
+                                <li><b>VITRIFICAÇÃO DE PINTURA</b></li>
+                                    <p>Protege a pintura do seu carro contra micro riscos e ações do tempo, 
+                                    além de fazer seu polimento durar muito mais!</p>
+                                <hr>
+                                <li><b>HIGIENIZAÇÃO INTERNA</b></li>
+                                    <p>É dentro do carro que passamos a maior parte do tempo. 
+                                    Todo o seu interior é cuidadosamente limpo e higienizado.</p>
+                                <hr>
+                                <li><b>LAVAGEM TÉCNICA DO MOTOR</b></li>
+                                    <p>Uma lavagem correta no motor evita ressecamentos de borrachas, oxidações e 
+                                        preserva o valor do veículo em casos de venda ou troca.</p>
+                                <hr>
+                                <li><b>TRATAMENTO DAS RODAS</b></li>
+                                    <p>Retiramos as rodas do carro para remover todas as contaminações ferrosas 
+                                        ocasionadas pelas pastilhas de freio e demais impurezas</p>
+                                <hr>
+                            </ul>
                         </div>
                     </div>
                 </div>
-                <figure class="col-lg-7 col-sm-6  text-right wow fadeInUp delay-02s">
+                <figure class="col-lg-6 col-sm-6 text-right wow fadeInUp delay-02s">
                     <img src="/public/img/white-car.jpg" alt="cleaning-white-car">
+                </figure>
+                <br/> <br/> <br/>
+                <figure class="col-lg-6 col-sm-6 text-right wow fadeInUp delay-02s">
+                        <img src="/public/img/img004.jpg" alt="cleaning-black-car">
                 </figure>
 
             </div>
@@ -127,11 +161,11 @@
         <!--main-section alabaster-start-->
         <div class="container">
             <div class="row">
-                <figure class="col-lg-5 col-sm-4 wow fadeInLeft">
+                <figure class="col-lg-6 col-sm-6 wow fadeInLeft">
                     <img src="/public/img/camaro.jpg" alt="car-camaro">
                 </figure>
-                <div class="col-lg-7 col-sm-8 featured-work">
-                    <div class="featured-box-col2 wow fadeInRight delay-02s">
+                <div class="col-lg-5 col-sm-7 featured-work">
+                    <div class="featured-box-col2 wow fadeInRight delay-04s">
                         <h3>Quer deixar impecável somente na parte Exterior?</h3>
                         <p>Temos desde uma lavagem simples a mais completa. 
                             Na <strong>lavagem simples</strong>, temos:</p>
@@ -168,7 +202,7 @@
         <!--main-section-start-->
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-sm-6 wow fadeInLeft delay-05s">
+                <div class="col-lg-6 col-sm-6 wow fadeInLeft delay-04s">
                     <div class="service-list">
                         <div class="service-list-col2">
                             <h3>Sinta-se em um carro que acabou de sair da fábrica, peça uma limpeza no Interior.</h3>
@@ -187,7 +221,7 @@
                         </div>
                     </div>
                 </div>
-                <figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
+                <figure class="col-lg-6 col-sm-6  text-right wow fadeInUp delay-02s">
                     <img src="/public/img/porshe_intern.jpeg" alt="intern-of-porshe">
                 </figure>
 
@@ -197,12 +231,10 @@
     <!--main-section-end-->
 
 
-
-    <section class="main-section paddind" id="Portfolio">
         <!--main-section-start-->
         <div class="container">
             <h2>Portfolio</h2>
-            <h6>Aqui estão alguns dos meu melhores trabalho, o seu pode ficar igual!</h6>
+            <h6>Aqui estão alguns dos meu melhores trabalhos, o seu pode ficar igual!</h6>
             <div class="portfolioFilter">
                 <ul class="Portfolio-nav wow fadeIn delay-02s">
                     <li>
