--- a/server/src/public/views/index.html
+++ b/server/src/public/views/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, maximum-scale=1">
-    <meta name="description" content="Estética automativa profissional">
+    <meta name="description" content="Estética automotiva profissional">
     <meta name="keywords" content="detailer automotivo,detailer,automotivo,carro,automóvel,lavagem,
                                     estética automativa, estética,estética automotiva sp,estética automotiva Jundiaí,
                                     estética automotiva jundiai,lavar carro, Garducci, Garducci Detail,
@@ -145,9 +145,8 @@
                 <figure class="col-lg-6 col-sm-6 text-right wow fadeInUp delay-02s">
                     <img src="/public/img/white-car.jpg" alt="cleaning-white-car">
                 </figure>
-                <br/> <br/> <br/>
                 <figure class="col-lg-6 col-sm-6 text-right wow fadeInUp delay-02s">
-                        <img src="/public/img/img004.jpg" alt="cleaning-black-car">
+                        <img id="second-img" src="/public/img/cleaning-camaro.jpeg" alt="cleaning-camaro">
                 </figure>
 
             </div>
