--- a/server/src/public/views/index.html
+++ b/server/src/public/views/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="detailer automotivo,detailer,automotivo,carro,automóvel,lavagem,
                                     estética automativa, estética,estética automotiva sp,estética automotiva Jundiaí,
                                     estética automotiva jundiai,lavar carro, Garducci, Garducci Detail,
-                                    garducci, garduccidetail">
+                                    Garducci, garduccidetail">
     <meta name="author" content="Marcus Garducci">
 
     <title>Garducci Detail</title>
@@ -165,32 +165,27 @@
                 </figure>
                 <div class="col-lg-5 col-sm-7 featured-work">
                     <div class="featured-box-col2 wow fadeInRight delay-04s">
-                        <h3>Quer deixar impecável somente na parte Exterior?</h3>
-                        <p>Temos desde uma lavagem simples a mais completa. 
-                            Na <strong>lavagem simples</strong>, temos:</p>
+                        <h3>Lavagem Externa Detalhada</h3>
+                        <p>A lavagem externa detalhada é feita nos mínimos detalhes visando sempre o resultado 
+                            final sem medir esforços.</p>
                         <ul>
-                            <li>Uma pré-lavagem com banho de espuma</li>
-                            <li>Lavagem manual do veículo</li>
-                            <li>Descontaminação da pintura</li>
-                            <li>Lavagem e condicionamento das caixas de roda</li>
-                            <li>Polimento e selagem das lanternas e faróis</li>
-                        </ul>
-                        <p>Só com essa lavagem simples o carro já vai estar com outra cara,
-                            mas caso queira um capricho a mais, aqui vai a <strong>lavagem completa:</strong>
-                        </p>
-                        <ul>
-                            <li>Todos os itens da lavagem simples</li>
-                            <li>No exterior e interior das rodas, faremos um polimento e selagem</li>
-                            <li>Polimento dos metais e cromados</li>
-                            <li>A pintura receberá um tratamento especializado, de acordo com a necessidade, 
-                                terá um número de fases adequados, sendo feito o corte, polimento e lustro</li>
-                            <li>Limpeza e selagem dos vidros</li>
-                            <li>Condicionamento de borrachas e plásticos</li>
-                            <li>Para proteger sua pintura após todo o tratamento, 
-                                será passado uma proteção com cera ou selante ou revestimento de vidro.</li>
+                            <li>Pre-­lavagem com banho de espuma­</li>
+                            <hr>
+                            <li>Lavagem manual com luvas e shampoo automotivo com PH neutro. Limpeza com VAPOR nas entradas 
+                                de portas, porta malas, dobradiças dos retrovisores e maçanetas</li>
+                            <hr>
+                            <li>Limpeza e proteção das rodas e caixas de rodas</li>
+                            <hr>
+                            <li>Limpeza e condicionamento de plásticos e borrachas</li>
+                            <hr>
+                            <li>Limpeza dos vidros</li>
+                            <hr>
+                            <li>Descontaminação da Pintura com clay bar</li>
+                            <hr>
+                            <li>Aplicação de cera de longa duração</li>
+                            <hr>
                         </ul>
                     </div>
-                    <a class="Learn-More" href="#">Learn More</a>
                 </div>
             </div>
         </div>
@@ -204,19 +199,23 @@
                 <div class="col-lg-6 col-sm-6 wow fadeInLeft delay-04s">
                     <div class="service-list">
                         <div class="service-list-col2">
-                            <h3>Sinta-se em um carro que acabou de sair da fábrica, peça uma limpeza no Interior.</h3>
-                            <p>Para que você sinta aquele cheiro de novo no carro, nós fazemos uma aspiração no
-                                interior do veículo, limpeza nas dobradiças e guarnições das portas.
+                            <h3>Higienização Interna</h3>
+                            <p>A Higienização Interna do carro é fundamental, pois é dentro dele que passamos uma 
+                                boa parte do nosso tempo no dia a dia, então devemos ter cuidados especiais 
+                                quando falamos nesse assunto.
                             </p>
-                            <br />
-                            <p>Se você tem banco de couro, não se preocupe, fazemos a limpeza e condicionamento deles,
-                                seu forro do teto voltará a ter a cor de fábrica, e seu painel de instrumentos ficará impecável.
-                            </p>
-                            <br />
-                            <p>    
-                                Todos os plásticos e borrachas do veículo serão limpados junto
-                                com os vidros do automóvel.
-                            </p>
+                            <ul>
+                                <li>Higienização dos bancos de tecidos (impermeabilização serviço extra)</li>
+                                <hr>
+                                <li>Higienização do carpete, forrações de portas e porta mala</li>
+                                <hr>
+                                <li>Limpeza e condicionamento do painel</li>
+                                <hr>
+                                <li>Limpeza e condicionamento de partes plásticas e borrachas</li>
+                                <hr>
+                                <li>Higienização do ar condicionado</li>
+                                <hr>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -315,7 +314,9 @@
                     <div class="contact-info-box phone clearfix">
                         <h3>
                             <i class="fa-phone"></i>Celular: </h3>
-                        <span>(11) 99412-7187</span>
+                        <span><a href="https://api.whatsapp.com/send?phone=5511994127187&text=Olá, visitei seu site e gostei do seu trabalho. Vamos bater um papo e fazer um orçamento?">(11) 99412-7187</a>
+                            </span>
+                        
                     </div>
                     <div class="contact-info-box email clearfix">
                         <h3>
