--- a/server/src/public/views/index.html
+++ b/server/src/public/views/index.html
@@ -277,7 +277,7 @@
             </div>
 
             <div class=" Portfolio-box cars">
-                <img src="/public/img/fusca04.jpg" alt="car-fusca">
+                <img src="/public/img/mercedes-out.jpeg" alt="cleaning-mercedes">
             </div>
             <div class=" Portfolio-box moto">
                 <img src="/public/img/moto05.jpg" alt="">
@@ -285,15 +285,11 @@
                 <p>Tratamento profissional.</p>
             </div>
             <div class=" Portfolio-box cars">
-                <img src="/public/img/car-intern.jpg" alt="washing-intern-of-car">
+                <img src="/public/img/img016.jpeg" alt="bush-intern-car">
             </div>
         </div>
     </section>
     <!--main-section-end-->
-
-
-
-
 
     <section class="business-talking">
         <!--business-talking-start-->
@@ -327,9 +323,9 @@
                         <h3>
                             <i class="fa-clock-o"></i>Horários: </h3>
                         <span>
-                            <strong>Segunda - Sexta:</strong> 10:00 - 18:00.
+                            <strong>Segunda - Sexta:</strong> 09:00 - 19:00.
                             <br>
-                            <strong>Sábado - Domingo:</strong> Melhor não perguntar.</span>
+                            <strong>Sábado - Domingo:</strong> 09:00 - 19:00.</span>
                     </div>
                     <ul class="social-link">
                         <li class="facebook">
